Fix sizing issue on Safari

--- a/src/ReactColorPicker.module.scss
+++ b/src/ReactColorPicker.module.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 
   .saturation_value_selector {
-    flex: 1 1 auto;
+    flex: 1 1 0;
     margin-bottom: 10px;
   }
 
